--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
-{% include 'head.html' %}
-<body>
-    {% include 'body.html' %}
-</body>
+<html
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:v="urn:schemas-microsoft-com:vml"
+  xmlns:o="urn:schemas-microsoft-com:office:office"
+>
+  {% include 'head.html' %}
+  <body
+    style="
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      -ms-text-size-adjust: 100%;
+      -webkit-text-size-adjust: 100%;
+    "
+    cz-shortcut-listen="true"
+  >
+    <!--
+-->
+    <!--[if !gte mso 9]><!----><span
+      class="mcnPreviewText"
+      style="
+        display: none;
+        font-size: 0px;
+        line-height: 0px;
+        max-height: 0px;
+        max-width: 0px;
+        opacity: 0;
+        overflow: hidden;
+        visibility: hidden;
+        mso-hide: all;
+      "
+      >Plus, Wolf, GOP go to war over coronavirus disaster declaration.</span
+    ><!--<![endif]-->
+    <!--
+-->
+    <center>
+      <table
+        align="center"
+        border="0"
+        cellpadding="0"
+        cellspacing="0"
+        height="100%"
+        width="100%"
+        id="bodyTable"
+        style="
+          border-collapse: collapse;
+          mso-table-lspace: 0pt;
+          mso-table-rspace: 0pt;
+          -ms-text-size-adjust: 100%;
+          -webkit-text-size-adjust: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
+          width: 100%;
+        "
+      >
+        <tbody>
+          <tr>
+            <td
+              align="center"
+              valign="top"
+              id="bodyCell"
+              style="
+                mso-line-height-rule: exactly;
+                -ms-text-size-adjust: 100%;
+                -webkit-text-size-adjust: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                width: 100%;
+              "
+            >
+              <!-- BEGIN TEMPLATE // -->
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                width="100%"
+                style="
+                  border-collapse: collapse;
+                  mso-table-lspace: 0pt;
+                  mso-table-rspace: 0pt;
+                  -ms-text-size-adjust: 100%;
+                  -webkit-text-size-adjust: 100%;
+                "
+              >
+                <tbody>
+                  {% include 'hero.html' %}
+                  {% include 'body.html' %}
+                  {% include 'footer.html' %}
+                </tbody>
+              </table>
+
+              <!-- // END TEMPLATE -->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </center>
+    <img
+      src="https://spotlightpa.us3.list-manage.com/track/open.php?u=4f6d92afd9b3de3ddb48714b9&amp;id=5dc09aa155&amp;e=87448d50a3"
+      height="1"
+      width="1"
+    />
+  </body>
 </html>
