Change from using svg to png

--- a/src/templates/body_section.html
+++ b/src/templates/body_section.html
@@ -85,7 +85,7 @@
                   <!-- SECTION TEXT-->
                   {{ section.title }}
                   {% if section.image %}
-                    <img alt="My Image" src="data:image/svg+xml;base64,{{section.image}}"/>
+                    <img alt="My Image" src="data:image/png;base64,{{section.image}}"/>
                   {% endif %}
                   {{ section.content }}
                   <!-- END SECTION TEXT-->
