Add dynamic preview text

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,7 +31,7 @@
         visibility: hidden;
         mso-hide: all;
       "
-      >Plus, Wolf, GOP go to war over coronavirus disaster declaration.</span
+      > {{ preview_text }}</span
     ><!--<![endif]-->
     <!--
 -->
