Add link to browser version

--- a/src/templates/hero.html
+++ b/src/templates/hero.html
@@ -143,7 +143,7 @@
                                 "
                                 ><span style="font-size: 12px;"
                                   ><a
-                                    href="https://mailchi.mp/c18300364724/spotlightpa-the-investigator-3944449?e=87448d50a3"
+                                    href="{{ newsletter_browser_link }}"
                                     target="_blank"
                                     style="
                                       mso-line-height-rule: exactly;
