Integrate area chart and new charts template

--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -63,7 +63,7 @@
             "
           >
             <!-- BODY CONTAINER -->
-            {% for section in section_list %}
+            {% for section in sections %}
               {% include 'body_section.html' %}
             {% endfor %}
             <!-- END BODY CONTAINER -->
