Add fluid image settings

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -436,6 +436,17 @@
         line-height: 150% !important;
       }
     }
+
+    <!-- CUSTOM STYLES --!>
+
+    @media only screen and (max-width: 480px){
+        .chartImage{
+            height:auto !important;
+            max-width:600px !important;
+            width: 100% !important;
+        }
+    }
+
   </style>
   <!--[if !mso]><!-->
   <link
@@ -443,11 +454,4 @@
     rel="stylesheet"
   />
   <!--<![endif]-->
-  <style>
-    @media print {
-      #ghostery-purple-box {
-        display: none !important;
-      }
-    }
-  </style>
 </head>
