Constrain chart height to 600px, add responsive CSS

--- a/src/templates/section_chart.html
+++ b/src/templates/section_chart.html
@@ -1,5 +1,1 @@
-<div>
-    {{ chart.title }}
-    <img alt="chart image" src="{{ chart.image_path }}"/>
-    {{ chart.description }}
-</div>
+<div>    {{ chart.title }}    <img alt="chart image" src="{{ chart.image_path }}" class="chartImage"/>    {{ chart.description }}</div>
