Replace altair legends with custom HTML legends

--- a/src/templates/body_section_charts.html
+++ b/src/templates/body_section_charts.html
@@ -3,6 +3,6 @@
 {% block content %}
 <h3>{{ section.title }}</h3>
   {% for chart in section.charts %}
-    {% include 'section_chart.html' %}
+    {% include 'body_section_charts_chart.html' %}
   {% endfor %}
 {% endblock %}
