--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -445,6 +445,11 @@
         }
     }
 
+    .chart__legend-item-container {
+      display: inline-block;
+      margin-right: 4px;
+    }
+
   </style>
   <!--[if !mso]><!-->
   <link
