Improve margins/padding, slight refactor of class names

--- a/src/templates/body_section_charts.html
+++ b/src/templates/body_section_charts.html
@@ -1,8 +1,11 @@
 {% extends 'body_section.html' %}
 
 {% block content %}
-<h3>{{ section.title }}</h3>
-  {% for chart in section.charts %}
-    {% include 'body_section_charts_chart.html' %}
-  {% endfor %}
+  <h3>{{ section.title }}</h3>
+  <div class="charts__container">
+    {% for chart in section.charts %}
+      {% include 'body_section_charts_chart.html' %}
+    {% endfor %}
+  </div>
+  {% include 'body_divider.html' %}
 {% endblock %}
