--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -14,6 +14,7 @@
   <title> {{ head.title }}</title>
 
   <style type="text/css">
+
     p {
       margin: 10px 0;
       padding: 0;
@@ -437,8 +438,17 @@
       }
     }
 
+
+   .chart__container{
+      margin-bottom: 14px;
+    }
+
+    .chart__container:last-child{
+      margin-bottom: 0px;
+    }
+
     @media only screen and (max-width: 480px){
-        .chartImage{
+        .chart__img{
             height:auto !important;
             max-width:600px !important;
             width: 100% !important;
