Improve styles, add stats

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -460,6 +460,41 @@
       margin-right: 4px;
     }
 
+    .stats__container {
+      text-align: center;
+    }
+
+    .stats__title {
+      margin-bottom: 10px;
+      color: #393A3A;
+    }
+
+    .stats__item-container {
+       display: inline-block;
+       padding: 0 15px;
+    }
+
+    .stats__item-label {
+      text-transform: uppercase;
+      font-weight: bold;
+      background-color: #000000;
+      color: #FFFFFF;
+      padding: 2px 5px;
+      border-radius: 2px;
+      font-size: 14px;
+    }
+
+    .stats__item-value {
+      padding: 15px 0px;
+      font-size: 40px;
+    }
+
+     @media only screen and (max-width: 480px){
+        .stats__item-value {
+          font-size: 30px;
+        }
+    }
+
   </style>
   <!--[if !mso]><!-->
   <link
