--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -63,10 +63,17 @@
             "
           >
             <!-- BODY CONTAINER -->
+            {% with stats = stats_pa %}
+              {% include 'body_section_stats.html' %}
+            {% endwith %}
+            {% with stats = stats_county %}
+              {% include 'body_section_stats.html' %}
+            {% endwith %}
             {% include 'body_section_welcome.html' %}
             {% for section in sections %}
               {% include 'body_section_charts.html' %}
             {% endfor %}
+            {% include 'body_section_dash.html' %}
             <!-- END BODY CONTAINER -->
           </td>
         </tr>
