Improve stat styles

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -465,13 +465,16 @@
     }
 
     .stats__title {
-      margin-bottom: 10px;
-      color: #393A3A;
+      margin-bottom: 20px;
+      color: #6d6d6d;
+      font-weight: 300;
+      text-transform: uppercase;
     }
 
     .stats__item-container {
        display: inline-block;
        padding: 0 15px;
+       min-width: 25%;
     }
 
     .stats__item-label {
