--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -473,8 +473,14 @@
 
     .stats__item-container {
        display: inline-block;
-       padding: 0 15px;
+       padding: 0 10px;
        min-width: 25%;
+    }
+
+     @media only screen and (max-width: 480px){
+        .stats__item-container {
+           min-width: 40%;
+        }
     }
 
     .stats__item-label {
