Improve dash section styles

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -504,6 +504,28 @@
         }
     }
 
+    .dash__container {
+      text-align: center;
+    }
+
+    .dash__heading {
+      margin-bottom: 17px;
+      text-align: center;
+    }
+
+    .dash__content {
+    }
+
+    .dash__link {
+      mso-line-height-rule: exactly;
+      -ms-text-size-adjust: 100%;
+      -webkit-text-size-adjust: 100%;
+      color: #009edb;
+      font-weight: normal;
+      text-decoration: underline;
+    }
+
+
   </style>
   <!--[if !mso]><!-->
   <link
