--- a/src/templates/body_section_dash.html
+++ b/src/templates/body_section_dash.html
@@ -1,5 +1,12 @@
 {% extends 'body_section.html' %}
 
 {% block content %}
-<div style="text-align: center;"><a href="https://spotlightpa.us3.list-manage.com/track/click?u=4f6d92afd9b3de3ddb48714b9&amp;id=8ae7b08a9a&amp;e=87448d50a3" target="_blank" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #009edb;font-weight: normal;text-decoration: underline;">View our live coronavirus tracker for the latest county-by-county data</a></div>
+<div class="dash__container">
+    <h3 class="dash__heading">Want more stats?</h3>
+    <div class="dash__content">
+        View our <a class="dash__link"
+              href="https://spotlightpa.us3.list-manage.com/track/click?u=4f6d92afd9b3de3ddb48714b9&amp;id=8ae7b08a9a&amp;e=87448d50a3"
+              target="_blank">live coronavirus tracker</a> for the latest county-by-county data.
+    </div>
+</div>
 {% endblock %}
