--- a/src/templates/hero.html
+++ b/src/templates/hero.html
@@ -322,7 +322,7 @@
                             "
                           >
                             <a
-                              href="https://spotlightpa.us3.list-manage.com/track/click?u=4f6d92afd9b3de3ddb48714b9&amp;id=3be16fbcc0&amp;e=87448d50a3"
+                              href="https://www.spotlightpa.org"
                               title=""
                               class=""
                               target="_blank"
@@ -335,7 +335,7 @@
                               <img
                                 align="center"
                                 alt=""
-                                src="https://gallery.mailchimp.com/4f6d92afd9b3de3ddb48714b9/images/fbe8d952-3baf-4eda-b727-7c8f47f1df81.png"
+                                src="https://interactives.data.spotlightpa.org/assets/covid-email-alerts/assets/spotlightpa_logo.png"
                                 width="400"
                                 style="
                                   max-width: 400px;
