--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -438,6 +438,14 @@
       }
     }
 
+    .section-charts__title {
+      font-family: Helvetica-Bold;
+      font-size: 29px;
+      color: #0F0F0F;
+      text-align: center;
+      margin-bottom: 16px;
+    }
+
 
    .chart__container{
       margin-bottom: 14px;
@@ -453,6 +461,13 @@
             max-width:600px !important;
             width: 100% !important;
         }
+    }
+
+    .chart__title {
+      font-family: Helvetica-Bold;
+      font-size: 22px;
+      color: #000000;
+      line-height: 32px;
     }
 
     .chart__legend-item-container {
