Refactor and tweak template names and layout

--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -64,8 +64,8 @@
           >
             <!-- BODY CONTAINER -->
             {% include 'body_section_welcome.html' %}
-            {% for section in sections %}
-              {% include 'body_section_charts.html' %}
+            {% for section in sections_data %}
+              {% include 'body_section_data.html' %}
             {% endfor %}
             {% include 'body_section_dash.html' %}
             <!-- END BODY CONTAINER -->
