--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -438,7 +438,7 @@
       }
     }
 
-    .section-charts__title {
+    .section-data__title {
       font-family: Helvetica-Bold;
       font-size: 29px;
       color: #0F0F0F;
@@ -475,43 +475,6 @@
       margin-right: 4px;
     }
 
-    .stats__container {
-      text-align: center;
-    }
-
-    .stats__title {
-      margin-bottom: 20px;
-      color: #6d6d6d;
-      font-weight: 300;
-      text-transform: uppercase;
-    }
-
-    .stats__item-container {
-       display: inline-block;
-       padding: 0 10px;
-       min-width: 25%;
-    }
-
-     @media only screen and (max-width: 480px){
-        .stats__item-container {
-           min-width: 40%;
-        }
-    }
-
-    .stats__item-label {
-      text-transform: uppercase;
-      font-weight: bold;
-      background-color: #000000;
-      color: #FFFFFF;
-      padding: 2px 5px;
-      border-radius: 2px;
-      font-size: 14px;
-    }
-
-    .stats__item-value {
-      padding: 15px 0px;
-      font-size: 40px;
-    }
 
      @media only screen and (max-width: 480px){
         .stats__item-value {
