--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -438,6 +438,25 @@
       }
     }
 
+    .hero__title {
+      font-family: Helvetica;
+      font-size: 16px;
+      color: #757575;
+      text-align: center;
+      line-height: 32px;
+      font-family: Helvetica;
+      margin-bottom: 19px;
+    }
+
+    .hero__tagline {
+      font-family: Helvetica-Bold;
+      font-size: 36px;
+      color: #0F0F0F;
+      letter-spacing: 1px;
+      text-align: center;
+      line-height: 150%;
+    }
+
     .section-data__title {
       font-family: Helvetica-Bold;
       font-size: 29px;
