--- a/src/templates/hero.html
+++ b/src/templates/hero.html
@@ -179,94 +179,6 @@
               cellpadding="0"
               cellspacing="0"
               width="100%"
-              class="mcnButtonBlock"
-              style="
-                min-width: 100%;
-                border-collapse: collapse;
-                mso-table-lspace: 0pt;
-                mso-table-rspace: 0pt;
-                -ms-text-size-adjust: 100%;
-                -webkit-text-size-adjust: 100%;
-              "
-            >
-              <tbody class="mcnButtonBlockOuter">
-                <tr>
-                  <td
-                    style="
-                      padding-top: 0;
-                      padding-right: 18px;
-                      padding-bottom: 18px;
-                      padding-left: 18px;
-                      mso-line-height-rule: exactly;
-                      -ms-text-size-adjust: 100%;
-                      -webkit-text-size-adjust: 100%;
-                    "
-                    valign="top"
-                    align="center"
-                    class="mcnButtonBlockInner"
-                  >
-                    <table
-                      border="0"
-                      cellpadding="0"
-                      cellspacing="0"
-                      class="mcnButtonContentContainer"
-                      style="
-                        border-collapse: separate !important;
-                        border-radius: 4px;
-                        background-color: #ea5b3a;
-                        mso-table-lspace: 0pt;
-                        mso-table-rspace: 0pt;
-                        -ms-text-size-adjust: 100%;
-                        -webkit-text-size-adjust: 100%;
-                      "
-                    >
-                      <tbody>
-                        <tr>
-                          <td
-                            align="center"
-                            valign="middle"
-                            class="mcnButtonContent"
-                            style="
-                              font-family: Arial;
-                              font-size: 16px;
-                              padding: 10px;
-                              mso-line-height-rule: exactly;
-                              -ms-text-size-adjust: 100%;
-                              -webkit-text-size-adjust: 100%;
-                            "
-                          >
-                            <a
-                              class="mcnButton"
-                              title="♡ Support Us"
-                              href="https://spotlightpa.us3.list-manage.com/track/click?u=4f6d92afd9b3de3ddb48714b9&amp;id=c406eb53dd&amp;e=87448d50a3"
-                              target="_blank"
-                              style="
-                                font-weight: bold;
-                                letter-spacing: normal;
-                                line-height: 100%;
-                                text-align: center;
-                                text-decoration: none;
-                                color: #ffffff;
-                                mso-line-height-rule: exactly;
-                                -ms-text-size-adjust: 100%;
-                                -webkit-text-size-adjust: 100%;
-                                display: block;
-                              "
-                              >♡ Support Us</a
-                            >
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <table
-              border="0"
-              cellpadding="0"
-              cellspacing="0"
-              width="100%"
               class="mcnImageBlock"
               style="
                 min-width: 100%;
@@ -484,60 +396,16 @@
                             class="mcnTextContent"
                             style="
                               padding: 0px 18px 9px;
-                              font-family: Arial, 'Helvetica Neue', Helvetica,
-                                sans-serif;
                               line-height: 200%;
                               mso-line-height-rule: exactly;
                               -ms-text-size-adjust: 100%;
                               -webkit-text-size-adjust: 100%;
                               word-break: break-word;
-                              color: #757575;
-                              font-size: 16px;
-                              text-align: left;
                             "
                           >
                             <div style="text-align: center;">
-                              <span style="font-size: 26px;"
-                                ><span style="color: #000000;"
-                                  ><u
-                                    ><span
-                                      style="
-                                        font-family: lato, helvetica neue,
-                                          helvetica, arial, sans-serif;
-                                      "
-                                      ><strong>{{ hero.title }}</strong></span
-                                    ></u
-                                  ></span
-                                ></span
-                              >
-
-                              <p
-                                style="
-                                  text-align: center;
-                                  font-family: Arial, 'Helvetica Neue',
-                                    Helvetica, sans-serif;
-                                  line-height: 200%;
-                                  margin: 10px 0;
-                                  padding: 0;
-                                  mso-line-height-rule: exactly;
-                                  -ms-text-size-adjust: 100%;
-                                  -webkit-text-size-adjust: 100%;
-                                  color: #757575;
-                                  font-size: 16px;
-                                "
-                              >
-                                <span
-                                  style="
-                                    font-family: lato, helvetica neue, helvetica,
-                                      arial, sans-serif;
-                                  "
-                                  ><span style="font-size: 18px;"
-                                    ><span style="color: #000000;"
-                                      > {{ hero.tagline }} </span
-                                    ></span
-                                  ></span
-                                >
-                              </p>
+                              <div class="hero__title">{{ hero.title }}</div>
+                              <div class="hero__tagline" >{{ hero.tagline }}</div>
                             </div>
                           </td>
                         </tr>
