--- a/src/templates/hero.html
+++ b/src/templates/hero.html
@@ -395,7 +395,7 @@
                             valign="top"
                             class="mcnTextContent"
                             style="
-                              padding: 0px 18px 9px;
+                              padding: 0px 18px;
                               line-height: 200%;
                               mso-line-height-rule: exactly;
                               -ms-text-size-adjust: 100%;
