--- a/src/templates/body_section_welcome.html
+++ b/src/templates/body_section_welcome.html
@@ -1,6 +1,5 @@
 {% extends 'body_section.html' %}
 
 {% block content %}
-<p>There are XX,XXX total cases and X,XXX total deaths in Pennsylvania. But let's add some context. In the past two
-    weeks, COUNTY has seen XX XX XXX. The current overall trend in COUNTY is XXXX.</p>
+<p class="welcome__text-container">{{ section_welcome }}</p>
 {% endblock %}
