--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -445,7 +445,7 @@
       text-align: center;
       line-height: 32px;
       font-family: Helvetica;
-      margin-bottom: 19px;
+      margin-bottom: 8px;
     }
 
     .hero__tagline {
@@ -455,6 +455,7 @@
       letter-spacing: 1px;
       text-align: center;
       line-height: 150%;
+      margin-bottom: 19px;
     }
 
     .section-data__title {
@@ -462,7 +463,11 @@
       font-size: 29px;
       color: #0F0F0F;
       text-align: center;
-      margin-bottom: 16px;
+      margin-bottom: 22px;
+    }
+
+    .welcome__text-container {
+      margin-bottom: 32px;
     }
 
 
@@ -487,6 +492,10 @@
       font-size: 22px;
       color: #000000;
       line-height: 32px;
+    }
+
+    .chart__description {
+      margin-bottom: 18px;
     }
 
     .chart__legend-item-container {
