Replace mailchimp tracking links + icons with clean links

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -166,11 +166,11 @@
                                                                     -ms-text-size-adjust: 100%;
                                                                     -webkit-text-size-adjust: 100%;
                                                                   ">
-                                                                  <a href="https://spotlightpa.us3.list-manage.com/track/click?u=4f6d92afd9b3de3ddb48714b9&amp;id=5914c4cda8&amp;e=87448d50a3" target="_blank" style="
+                                                                  <a href="https://www.facebook.com/SpotlightPennsylvania/" target="_blank" style="
                                                                       mso-line-height-rule: exactly;
                                                                       -ms-text-size-adjust: 100%;
                                                                       -webkit-text-size-adjust: 100%;
-                                                                    "><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-facebook-48.png" alt="Like us on Facebook" style="
+                                                                    "><img src="https://interactives.data.spotlightpa.org/assets/icons/outline-light-facebook-48.png" alt="Like us on Facebook" style="
                                                                         display: block;
                                                                         border: 0;
                                                                         height: auto;
@@ -248,11 +248,11 @@
                                                                     -ms-text-size-adjust: 100%;
                                                                     -webkit-text-size-adjust: 100%;
                                                                   ">
-                                                                  <a href="https://spotlightpa.us3.list-manage.com/track/click?u=4f6d92afd9b3de3ddb48714b9&amp;id=bf9afca705&amp;e=87448d50a3" target="_blank" style="
+                                                                  <a href="https://twitter.com/SpotlightPA" target="_blank" style="
                                                                       mso-line-height-rule: exactly;
                                                                       -ms-text-size-adjust: 100%;
                                                                       -webkit-text-size-adjust: 100%;
-                                                                    "><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-twitter-48.png" alt="Follow us on Twitter" style="
+                                                                    "><img src="https://interactives.data.spotlightpa.org/assets/icons/outline-light-twitter-48.png" alt="Follow us on Twitter" style="
                                                                         display: block;
                                                                         border: 0;
                                                                         height: auto;
@@ -330,11 +330,12 @@
                                                                     -ms-text-size-adjust: 100%;
                                                                     -webkit-text-size-adjust: 100%;
                                                                   ">
-                                                                  <a href="https://spotlightpa.us3.list-manage.com/track/click?u=4f6d92afd9b3de3ddb48714b9&amp;id=8a8ede5292&amp;e=87448d50a3" target="_blank" style="
+                                                                  <a href="https://https://www.spotlightpa.org/" target="_blank" style="
                                                                       mso-line-height-rule: exactly;
                                                                       -ms-text-size-adjust: 100%;
                                                                       -webkit-text-size-adjust: 100%;
-                                                                    "><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-link-48.png" alt="Visit spotlightpa.org" style="
+                                                                    "><img
+                                                                          src="https://interactives.data.spotlightpa.org/assets/icons/outline-light-link-48.png" alt="Visit spotlightpa.org" style="
                                                                         display: block;
                                                                         border: 0;
                                                                         height: auto;
