Improve styles, chatter, and general refactoring

--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -68,6 +68,7 @@
               {% include 'body_section_data.html' %}
             {% endfor %}
             {% include 'body_section_dash.html' %}
+            {% include 'body_section_footnote.html' %}
             <!-- END BODY CONTAINER -->
           </td>
         </tr>
