--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -430,11 +430,7 @@
                             line-height: 150%;
                             text-align: center;
                           ">
-                          <em>Spotlight PA is an independent,
-                            non-partisan newsroom powered by The
-                            Philadelphia Inquirer in partnership
-                            with the Pittsburgh Post-Gazette and
-                            PennLive/The Patriot-News.<br>
+                          <em>{{ footer.about }}<br>
                             <br>
                             Copyright © Spotlight PA / The
                             Philadelphia Inquirer, All rights
