--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -458,16 +458,16 @@
       margin-bottom: 19px;
     }
 
-    .section-data__title {
+    .section-dash__title, .section-data__title {
       font-family: Helvetica-Bold;
-      font-size: 29px;
+      font-size: 22px;
       color: #0F0F0F;
       text-align: center;
       margin-bottom: 22px;
     }
 
     .welcome__text-container {
-      margin-bottom: 32px;
+      margin-bottom: 18px;
     }
 
 
@@ -489,8 +489,8 @@
 
     .chart__title {
       font-family: Helvetica-Bold;
-      font-size: 22px;
-      color: #000000;
+      font-size: 16px;
+      color: #0f0f0f;
       line-height: 32px;
     }
 
@@ -510,25 +510,20 @@
         }
     }
 
-    .dash__container {
+    .section-dash__container {
       text-align: center;
     }
 
-    .dash__heading {
-      margin-bottom: 17px;
-      text-align: center;
+
+    .section-dash__blurb {
+      text-align: left;
     }
 
-    .dash__content {
-    }
-
-    .dash__link {
-      mso-line-height-rule: exactly;
-      -ms-text-size-adjust: 100%;
-      -webkit-text-size-adjust: 100%;
-      color: #009edb;
-      font-weight: normal;
-      text-decoration: underline;
+    .section-footnote__text {
+      font-family: Helvetica-Oblique;
+      font-size: 16px;
+      color: #757575;
+      margin-bottom: 5px;
     }
 
 
