--- a/src/templates/styles/index.css
+++ b/src/templates/styles/index.css
@@ -450,7 +450,11 @@
     }
 
     .welcome__text-container {
-      margin-bottom: 18px;
+      margin-bottom: 5px;
+    }
+
+    .section-donate__container {
+        margin-bottom: 5px;
     }
 
 
