Tweak font size

--- a/src/templates/body_section_donate.html
+++ b/src/templates/body_section_donate.html
@@ -63,7 +63,7 @@
                   line-height: 150%;
                 "
               >
-                <div style="text-align: center;">
+                <div class="section-donate__container-inner" >
                   {{ section_donate.blurb }}
                 </div>
               </td>
