--- a/src/templates/styles/index.css
+++ b/src/templates/styles/index.css
@@ -457,6 +457,11 @@
         margin-bottom: 5px;
     }
 
+    .section-donate__container-inner {
+        text-align: center;
+        font-size: 16px;
+    }
+
 
    .chart__container{
       margin-bottom: 14px;
