Fix broken link

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -330,7 +330,7 @@
                                                                     -ms-text-size-adjust: 100%;
                                                                     -webkit-text-size-adjust: 100%;
                                                                   ">
-                                                                  <a href="https://https://www.spotlightpa.org/" target="_blank" style="
+                                                                  <a href="https://www.spotlightpa.org/" target="_blank" style="
                                                                       mso-line-height-rule: exactly;
                                                                       -ms-text-size-adjust: 100%;
                                                                       -webkit-text-size-adjust: 100%;
