--- a/covid_email_alerts/templates/footer.html
+++ b/covid_email_alerts/templates/footer.html
@@ -451,7 +451,6 @@
                           You're receiving this email because you
                           signed up for updates about Spotlight
                           PA's journalism.&nbsp;<br>
-                          You can
                           <a href="{{ unsubscribe_preferences_link }}" style="
                               mso-line-height-rule: exactly;
                               -ms-text-size-adjust: 100%;
@@ -459,16 +458,7 @@
                               color: #ffffff;
                               font-weight: normal;
                               text-decoration: underline;
-                            ">update your preferences</a>
-                          or
-                          <a href="{{ unsubscribe_link }}" style="
-                              mso-line-height-rule: exactly;
-                              -ms-text-size-adjust: 100%;
-                              -webkit-text-size-adjust: 100%;
-                              color: #ffffff;
-                              font-weight: normal;
-                              text-decoration: underline;
-                            ">unsubscribe from this list</a>.
+                            ">Unsubscribe</a> from this list.
                         </td>
                       </tr>
                     </tbody>
